# euporia

./: .env.example  .gitignore  Cargo.toml  Dockerfile.sandbox  Makefile  README.md  sandbox-setup.sh
.claude/: CLAUDE.md
backend/: Cargo.toml
backend/migrations/: 001_create_profiles.sql  002_create_conversations.sql  003_create_conversation_messages.sql  004_create_ai_insights_cache.sql  005_create_cart_sessions.sql  006_create_deliveries.sql  007_create_replenishment_items.sql  008_create_wishlists.sql  009_create_bundles.sql  010_create_price_history.sql  011_add_conversation_meta.sql
backend/src/: lib.rs  main.rs
docs/brainstorms/: 2026-02-12-ai-personal-shopper-brainstorm.md  2026-02-12-nwc-agent-payments-brainstorm.md  2026-02-12-pluggable-llm-backend-brainstorm.md  2026-02-12-shopai-ui-redesign-brainstorm.md
docs/plans/: 2026-02-12-feat-ai-personal-shopper-chat-plan.md  2026-02-12-feat-ai-personal-shopper-plan.md  2026-02-12-feat-nwc-agent-bitcoin-payments-plan.md  2026-02-12-feat-pluggable-llm-backend-plan.md  2026-02-12-feat-shopai-multi-screen-ui-plan.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: cart-panel.tsx  cart-summary.tsx  chat.tsx  conversation-sidebar.tsx  dashboard.tsx  discover-hub.tsx  markdown-response.tsx  mobile-header.tsx  product-card.tsx  product-detail.tsx  search-header.tsx  sidebar.tsx  user-profile-badge.tsx
frontend/lib/: cart-context.tsx  llm.ts  merchant-context.tsx  merchants.ts  query-provider.tsx  session.ts  shopify-mcp.ts  (+1 more)
(+23 files in other folders)
