[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
bdk_wallet = "1"
bdk_esplora = { version = "0.20", features = ["async-https"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
