[package]
name = "euporia-backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
bdk_wallet.workspace = true
bdk_esplora.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
